<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/editTextSectionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="14"
        android:hint="@string/attribute_tollbooth_sectionId" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextNumberOfLanes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="14"
        android:hint="@string/attribute_tollbooth_numLanes"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextCollectionTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="14"
        android:hint="@string/attribute_tollbooth_collectionTarget"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextCurrentCollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="14"
        android:hint="@string/attribute_tollbooth_currentCollection"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minEms="7"
            android:text="@string/current_location" />

        <TextView
            android:id="@+id/textViewDisplayCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/waiting_for_location" />

    </LinearLayout>

<!--     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

    </LinearLayout> -->

</LinearLayout>