<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="${packageName}.${activityClass}" >

    <Spinner
        android:id="@+id/spinnerPoiType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:entries="@array/poi_list"
        android:prompt="@string/select_poi" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerPoiType"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextDetails"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/editTextName"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Details" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextDetails"
        android:layout_alignRight="@+id/editTextDetails"
        android:layout_below="@+id/editTextDetails" >

        <Button
            android:id="@+id/buttonSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="save"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="close"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>
